account-data/Reishi-Narisada/sa-east-1/ec2-describe-route-tables.json
{
    "RouteTables": [
        {
            "Associations": [
                {
                    "Main": true,
                    "RouteTableAssociationId": "rtbassoc-4bf5732c",
                    "RouteTableId": "rtb-64b0f300"
                }
            ],
            "OwnerId": "416817624313",
            "PropagatingVgws": [],
            "RouteTableId": "rtb-64b0f300",
            "Routes": [
                {
                    "DestinationCidrBlock": "172.31.0.0/16",
                    "GatewayId": "local",
                    "Origin": "CreateRouteTable",
                    "State": "active"
                },
                {
                    "DestinationCidrBlock": "0.0.0.0/0",
                    "GatewayId": "igw-fd6f5998",
                    "Origin": "CreateRoute",
                    "State": "active"
                }
            ],
            "Tags": [],
            "VpcId": "vpc-31491b55"
        }
    ]
}
